# mdc

./: .gitignore  .gitmodules  README.md  pyproject.toml
Settings/: config.ini  input_data.json
mdc/: __main__.py
mdc/controller/: appEngine.py  configini_parser.py  errorWindowController.py  supervisorcontroller.py  sync_settings.py
mdc/model/: commentModel.py  crsModel.py  locationModel.py  scenarioModel.py  sequenceModel.py  supervisorModel.py  vehicleModel.py
mdc/ui/: App.qml  BoschColors.qml  ErrorWindow.qml  ScreenTitle.qml  Screen_AddNewSupervisor.qml  Screen_SelectScenario.qml  Screen_SelectSupervisor.qml  qmldir
tests/test_ScenarioModel/: test_scenarioModel.py
