[tool.poetry]
name = "mdc"
version = "0.0.1"
description = ""
authors = ["Ozsvath Tamas <tozsvath@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pyside6 = "^6.10.2"
pydantic = "1.10.2"

[tool.poetry.scripts]
mdc = 'mdc.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
